19/02/2007
OrbWeaver
- Entity Inspector allows sorting by key or value.

18/02/2007
OrbWeaver
- Light Inspector uses white as a default colour (rather than black) for lights
  with no explicit colour key.
greebo
- Rewrote Surface Inspector (handles both brushes and patches now).

16/02/2007
OrbWeaver
- Filter system now affects static models in the camera view.
- Static models in camera view display with their correct skins.
greebo
- Added "Stitch Patch Textures" feature to snap texture coords of adjacent patches.

15/02/2007
OrbWeaver
- Save and load dialogs now activate on Enter key.
- ".map" extension appended to saved map files if not specified in dialog.
- Fixed crash when Colours dialog is closed with X button.

13/02/2007
greebo
- Added "Patch Thicken" feature.

12/02/2007
greebo
- Added Entity Selection Mode Toggle to limit mouse operations to entities.
- Added Flip X / Flip Y texture commands.
- Fixed Scale Manipulator for brushes.
- Entity List Selection now focuses the camera and orthoviews on the selected 
  entity.

11/02/2007
greebo
- Added ability to cancel transformation operations by hitting ESC.

08/02/1007
OrbWeaver
- Added GUI to edit background image, accessed from View menu
- Fixed crash when loading a .BAK copy of a map file
- Changing an entity keyvalue now correctly sets the "map modified" flag

29/01/2007
greebo
- Added option to show a background image in orthoviews.
- Camera position is saved and restored upon map load.

** RELEASE 0.8.1

28/01/2007
OrbWeaver
- Fixed crash when SkinChooser displayed for an AI rather than a static model.
- Fixed assertion failure when shutting down after browsing some textures in the
  Media Browser.
greebo
- Fixed assertion failure when switching render modes while freelook mode was
  active.
- Fixed inability to display Entity Inspector due to double-binding of the
  shortcut.

** RELEASE 0.8.0

26/01/2007
OrbWeaver
- Fixed leaks in saved maps caused by use of "_emptyname" instead of "_default"
